--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:11.8.0'
     compile 'com.google.android.gms:play-services:11.8.0'
     compile 'com.google.firebase:firebase-core:11.8.0'
+    compile 'com.github.armcha:SpaceNavigationView:1.6.0'
     testImplementation 'junit:junit:4.12'
-
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
