--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,13 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
+
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -32,9 +34,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.android.gms:play-services-location:11.8.0'
-    compile 'com.google.android.gms:play-services:11.8.0'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.github.armcha:SpaceNavigationView:1.6.0'
+    compile 'com.android.support:multidex:1.0.3'
+    compile 'com.google.android.gms:play-services:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
