--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <uses-feature android:name="android.hardware.camera" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:name=".Loot_Application"
+        android:name=".LootApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,7 +24,6 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-
         <activity
             android:name=".Main3Activity"
             android:label="@string/app_name">
@@ -33,7 +33,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".WelcomeSlider" />
+        <activity android:name=".WelcomeSlider"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
         <activity
             android:name=".DashboardLoot"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -54,6 +56,9 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
+
+        <activity android:name=".Duel_Alert_Transparent_Activity"
+            android:theme="@style/Transparent_Theme"></activity>
     </application>
 
 </manifest>
