--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.github.armcha:SpaceNavigationView:1.6.0'
     compile 'com.android.support:multidex:1.0.3'
     compile 'com.google.android.gms:play-services:11.8.0'
+    compile 'com.google.firebase:firebase-firestore:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
