--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
+            android:theme="@style/AppTheme.NoActionBar"
             android:name=".Main3Activity"
+
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
